@@ -1,5 +1,8 @@
 2008-10-27  Gabor Csardi  <csardi@szaffi>
 
+	* src/structural_properties.c
+	(igraph_avg_nearest_neighbor_degree) : 'weights' argument added
+
 	* src/structural_properties.c (igraph_strength) : added
 
 	* src/structural_properties.c 
